--- a/.github/workflows/automated_tests_appium_android.yml
+++ b/.github/workflows/automated_tests_appium_android.yml
@@ -97,14 +97,12 @@ jobs:
                 run: bash fastlane/automatedTests/appium/android/run_appium_android_tests.sh
                 env:
                     ANDROID_SDK_ROOT: /Users/runner/Library/Android/sdk
+
+            -   name: Expose test screenshot files
+                if: always()
                 uses: actions/download-artifact@v2
                 with:
                     path: tests/appium/project/build/screenshots/
-                    
-#            -   name: Expose test screenshot files
-#                uses: actions/download-artifact@v2
-#                with:
-#                    path: tests/appium/project/build/screenshots/
 
             -   name: Cleanup
                 run: bundle exec fastlane automated_tests cleanup
