--- a/.github/workflows/automated_tests_appium_android.yml
+++ b/.github/workflows/automated_tests_appium_android.yml
@@ -99,7 +99,7 @@ jobs:
                     ANDROID_SDK_ROOT: /Users/runner/Library/Android/sdk
 
             -   name: Expose failed test screenshot files
-                if: always()
+                if: failure()
                 uses: actions/upload-artifact@v2
                 with:
                     name: failed_tests_screenshots
