--- a/.github/workflows/automated_tests_appium_android.yml
+++ b/.github/workflows/automated_tests_appium_android.yml
@@ -76,14 +76,14 @@ jobs:
                     path: ${{ env.android-system-images-path }}
                     key: ${{ runner.os }}-build-${{ env.android-system-images-cache-key }}-${{ hashFiles('fastlane/automatedTests/appium/android/config_and_run_android_emulator.sh') }}
             
-            -   name: Cache android avds
-                uses: actions/cache@v2
-                env:
-                    android-avd-cache-key: android-avd-cache
-                    android-avd-path: ~/.android
-                with:
-                    path: ${{ env.android-avd-path }}
-                    key: ${{ runner.os }}-build-${{ env.android-avd-cache-key }}-${{ hashFiles('fastlane/automatedTests/appium/android/config_and_run_android_emulator.sh') }}
+#            -   name: Cache android avds
+#                uses: actions/cache@v2
+#                env:
+#                    android-avd-cache-key: android-avd-cache
+#                    android-avd-path: ~/.android
+#                with:
+#                    path: ${{ env.android-avd-path }}
+#                    key: ${{ runner.os }}-build-${{ env.android-avd-cache-key }}-${{ hashFiles('fastlane/automatedTests/appium/android/config_and_run_android_emulator.sh') }}
             
             -   name: Config and run Appium server
                 run: bash fastlane/automatedTests/appium/android/config_and_run_appium_server.sh
