--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -4,4 +4,4 @@ CODEOWNERS
 android/  @tuliopereirazup @hernandazevedozup @matheusribeirozup @uziasferreirazup @hthemir @danilorochazup @jefersonlopeszup @tarcisiogc @paulomeurerzup @gabrielleonardozup @carlossteinzup @viniciusguardieirozup @luisoliveirazup @jenifersantoszup
 iOS/ @theffc @gabcoelho @dantes-git @victormr @yandiaszup @gmarson @lucasaraujo @tarcisiogc @caioortu @lucasfonsecazup @luisgustavozup @joaoabreuzup
 backend/  @tarcisiogc @LG95 @ze12augusto @adautopaulazup @tuliopereirazup @hernandazevedozup @matheusribeirozup @uziasferreirazup @hthemir @danilorochazup @jefersonlopeszup @Tiagoperes
-flutter/  @tarcisiogc @tuliopereirazup @matheusribeirozup @uziasferreirazup @dantes-git @gmarson @paulomeurerzup @gabrielleonardozup @theffc @gabcoelho @dantes-git @Tiagoperes
+flutter/  @tarcisiogc @tuliopereirazup @matheusribeirozup @uziasferreirazup @dantes-git @gmarson @paulomeurerzup @gabrielleonardozup @theffc @gabcoelho @dantes-git @Tiagoperes @igorgiumellizup
