--- a/.github/workflows/automated_tests_appium_android.yml
+++ b/.github/workflows/automated_tests_appium_android.yml
@@ -13,33 +13,7 @@ on:
             - '.github/**'
 
 jobs:
-    
-    build_app_android:
-    
-        name: Build Android app for Appium tests
-        runs-on: ubuntu-latest
-        steps:
-             -   uses: actions/checkout@v2
-             
-             -   name: set up JDK 1.8
-                 uses: actions/setup-java@v1
-                 with:
-                      java-version: 1.8
-           
-             -   name: Cache Appium app-android gradle dependencies
-                 uses: actions/cache@v2
-                 env:
-                     gradle-cache-key: app-android-tests-gradle-cache
-                     gradle-path: ~/.gradle
-                 with:
-                      path: ${{ env.gradle-path }}
-                      key: ${{ runner.os }}-build-${{ env.gradle-cache-key }}-${{ hashFiles('/tests/appium/app-android/buildSrc/**') }}
-                      restore-keys: ${{ runner.os }}-build-${{ env.gradle-cache-key }}
-
-             -   name: build app-android project
-                 run: bash ./tests/appium/app-android/gradlew -p tests/appium/app-android assembleDebug                      
-    
-    
+     
     appium_tests:
         
         name: Run Appium Android tests
@@ -72,9 +46,24 @@ jobs:
             -   name: Start Beagle backend in background
                 run: bash fastlane/automatedTests/start_test_backend.sh
 
-            #TODO wait for backend server finish starting to proceed
             -   name: Wait for server to start
                 run: sleep 30
+
+            -   name: Cache Appium app-android gradle dependencies
+                uses: actions/cache@v2
+                env:
+                    gradle-cache-key: app-android-tests-gradle-cache
+                    gradle-path: ~/.gradle
+                with:
+                     path: ${{ env.gradle-path }}
+                     key: ${{ runner.os }}-build-${{ env.gradle-cache-key }}-${{ hashFiles('/tests/appium/app-android/buildSrc/**') }}
+                     restore-keys: ${{ runner.os }}-build-${{ env.gradle-cache-key }}
+
+            -   name: build app-android project
+                run: | 
+                    java -version
+                    javac -version
+                    bash ./tests/appium/app-android/gradlew -p tests/appium/app-android assembleDebug
                         
             -   name: Config and run Appium server
                 run: bash fastlane/automatedTests/appium/android/config_and_run_appium_server.sh
