--- a/.github/workflows/automated_tests_appium_android.yml
+++ b/.github/workflows/automated_tests_appium_android.yml
@@ -61,9 +61,8 @@ jobs:
 
             -   name: build app-android project
                 run: | 
-                    java -version
-                    javac -version
                     bash ./tests/appium/app-android/gradlew -p tests/appium/app-android assembleDebug
+                    find / -name "app-debug.apk"
                         
             -   name: Config and run Appium server
                 run: bash fastlane/automatedTests/appium/android/config_and_run_appium_server.sh
@@ -75,7 +74,7 @@ jobs:
                     target: google_apis
                     arch: x86_64
                     profile: Nexus 6
-                    avd_name: Nexus6
+                    avd-name: Nexus6
                     disable-animations: true
                     script: ./tests/appium/project/gradlew -p tests/appium/project cucumber -Dplatform=android     
 
