--- a/.github/workflows/automated_tests_appium_android.yml
+++ b/.github/workflows/automated_tests_appium_android.yml
@@ -76,7 +76,9 @@ jobs:
                     profile: Nexus 6
                     avd-name: Nexus6
                     disable-animations: true
+                    emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim -skin 1080x2220 
                     script: ./tests/appium/project/gradlew -p tests/appium/project cucumber -Dplatform=android     
+                    # /Users/runner/work/beagle/beagle/tests/appium/app-android/app/build/outputs/apk/debug/app-debug.apk
 
             -   name: Expose failed test screenshot files
                 if: failure()
