container scanner test

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -13,10 +13,12 @@ jobs:
       run: |
         curl -fsSL https://horusec.io/bin/install.sh | bash 
         horusec start -p ./ -a "$HORUSEC_CLI_REPOSITORY_AUTHORIZATION" -G "true" -u "https://api-horusec.zup.com.br" -n "beagle"
+    
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
+        image-ref: 'docker.io/my-organization/my-app:${{ github.sha }}'
         format: 'table'
         exit-code: '1'
         ignore-unfixed: true
-        severity: 'CRITICAL,HIGH'    
+        severity: 'CRITICAL,HIGH'
