--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -13,12 +13,26 @@ jobs:
       run: |
         curl -fsSL https://horusec.io/bin/install.sh | bash 
         horusec start -p ./ -a "$HORUSEC_CLI_REPOSITORY_AUTHORIZATION" -G "true" -u "https://api-horusec.zup.com.br" -n "beagle"
-    
-    - name: Run Trivy vulnerability scanner
-      uses: aquasecurity/trivy-action@master
+
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.11
+      uses: actions/setup-java@v1
       with:
-        image-ref: 'docker.io/my-organization/my-app:${{ github.sha }}'
-        format: 'table'
-        exit-code: '1'
-        ignore-unfixed: true
-        severity: 'CRITICAL,HIGH'
+        java-version: 1.11
+
+    - name: Build with Maven
+      run: mvn --batch-mode --update-snapshots verify
+
+    - name: Dependecy Check
+      run: |
+        wget -q https://github.com/jeremylong/DependencyCheck/releases/download/v6.0.5/dependency-check-6.0.5-release.zip
+        unzip -q dependency-check-*.zip
+        ./dependency-check/bin/dependency-check.sh --scan "target/*.jar"
+  
+    - name: Trivy Scan - High and Critical Severity
+      uses: aquasecurity/trivy-action@0.0.7
+      with:
+        image-ref: ubuntu-latest
+        exit-code: 1
+        severity: HIGH,CRITICAL
+        format: table
