Secure pipeline new

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -3,6 +3,7 @@ name: Security
 on: [push]
 
 jobs:
+  # Horusec SAST w/ Manager
   horus:
     name: horus
     runs-on: ubuntu-latest
@@ -14,21 +15,20 @@ jobs:
         curl -fsSL https://horusec.io/bin/install.sh | bash 
         horusec start -p ./ -a "$HORUSEC_CLI_REPOSITORY_AUTHORIZATION" -G "true" -u "https://api-horusec.zup.com.br" -n "beagle"
 
-    - uses: actions/checkout@v2
+    # JDK 1.11
     - name: Set up JDK 1.11
       uses: actions/setup-java@v1
       with:
         java-version: 1.11
 
-    - name: Build with Maven
-      run: mvn --batch-mode --update-snapshots verify
-
+    # Dependecy Check
     - name: Dependecy Check
       run: |
         wget -q https://github.com/jeremylong/DependencyCheck/releases/download/v6.0.5/dependency-check-6.0.5-release.zip
         unzip -q dependency-check-*.zip
         ./dependency-check/bin/dependency-check.sh --scan "target/*.jar"
   
+    # Trivy Container Security
     - name: Trivy Scan - High and Critical Severity
       uses: aquasecurity/trivy-action@0.0.7
       with:
