--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Running Horus Security
       run: |
         curl -fsSL https://horusec.io/bin/install.sh | bash 
-        horusec start -p ./ -a "$HORUSEC_CLI_REPOSITORY_AUTHORIZATION" -G "true" -u "https://api-horusec.zup.com.br" -n "beagle-" + ${GITHUB_REF##*/}
+        horusec start -p ./ -a "$HORUSEC_CLI_REPOSITORY_AUTHORIZATION" -G "true" -u "https://api-horusec.zup.com.br" -n "beagle-${GITHUB_REF##*/}"
 
     # JDK 1.11
     - name: Set up JDK 1.11
