--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -14,20 +14,12 @@ jobs:
       run: |
         curl -fsSL https://horusec.io/bin/install.sh | bash 
         horusec start -p ./ -a "$HORUSEC_CLI_REPOSITORY_AUTHORIZATION" -G "true" -u "https://api-horusec.zup.com.br" -n "${GITHUB_REPOSITORY}_${GITHUB_REF##*/}"
-        echo ${GITHUB_REPOSITORY}_${GITHUB_REF##*/}
 
     # JDK 1.11
     - name: Set up JDK 1.11
       uses: actions/setup-java@v1
       with:
         java-version: 1.11
-
-    # Dependecy Check
-    # - name: Dependecy Check
-    #   run: |
-    #     wget -q https://github.com/jeremylong/DependencyCheck/releases/download/v6.0.5/dependency-check-6.0.5-release.zip
-    #     unzip -q dependency-check-*.zip
-    #     ./dependency-check/bin/dependency-check.sh --scan "target/*.jar"
   
     # Trivy Container Security
     - name: Trivy Scan - High and Critical Severity
@@ -35,5 +27,5 @@ jobs:
       with:
         image-ref: ubuntu:latest
         exit-code: 1
-        severity: HIGH,CRITICAL
+        severity: MEDIUM,HIGH,CRITICAL
         format: table
