--- a/android/sample/build.gradle
+++ b/android/sample/build.gradle
@@ -50,7 +50,11 @@ android {
 
     buildTypes {
         debug {
+            minifyEnabled true
+            shrinkResources true
+            debuggable true
             testCoverageEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         release {
             minifyEnabled true
