--- a/android/sample/build.gradle
+++ b/android/sample/build.gradle
@@ -35,7 +35,6 @@ android {
 
         testInstrumentationRunner Dependencies.GeneralNames.sampleTestInstrumentationRunner
         multiDexEnabled true
-
     }
 
     lintOptions {
@@ -59,14 +58,14 @@ android {
 
 dependencies {
     implementation Dependencies.AndroidxLibraries.appcompat
-
-    implementation Dependencies.GeneralLibraries.kotlin
     implementation Dependencies.AndroidxLibraries.coreKtx
+
+    implementation Dependencies.GeneralLibraries.multidex
+    implementation Dependencies.GeneralLibraries.kotlin
     implementation Dependencies.GeneralLibraries.kotlinCoroutines
 
     debugImplementation project(Dependencies.Modules.preview)
 
-    implementation "androidx.multidex:multidex:2.0.1"
 
     implementation project(Dependencies.Modules.core)
     kapt project(Dependencies.Modules.processor)
